[gd_scene load_steps=20 format=3 uid="uid://dcoxyviluve6"]

[ext_resource type="Script" uid="uid://q6gcofmmxfwa" path="res://scripts/bull/bull.gd" id="1_qus7o"]
[ext_resource type="PackedScene" uid="uid://ctilpcw7jea3" path="res://scenes/particles/step_particles.tscn" id="2_hqf4x"]
[ext_resource type="Texture2D" uid="uid://kd33jr2r2rlm" path="res://assets/sprites/bull-hard-Sheet.png" id="3_hqf4x"]
[ext_resource type="Texture2D" uid="uid://bvdotampt302a" path="res://assets/sprites/spin_effect-Sheet.png" id="4_pjux2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trfny"]
size = Vector2(16, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_pjux2"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u6nmb"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qus7o"]
size = Vector2(10, 14)

[sub_resource type="Animation" id="Animation_hqf4x"]
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpinSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpinSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u6nmb"]
resource_name = "charge"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpinSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_few7h"]
resource_name = "head_swipe"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6999999, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 31, 30, 33, 32, 20]
}

[sub_resource type="Animation" id="Animation_qus7o"]
resource_name = "walk"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1]
}

[sub_resource type="Animation" id="Animation_cvj11"]
resource_name = "spin_end"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_o2ojk"]
resource_name = "spin_cycle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_bav2j"]
resource_name = "spin"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpinSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpinSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_fbkg3"]
resource_name = "stomp"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47, 49]
}

[sub_resource type="Animation" id="Animation_pjux2"]
resource_name = "walk"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 20]
}

[sub_resource type="Animation" id="Animation_n733k"]
resource_name = "head_swipe_reverse"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7, 0.79999995, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 32, 33, 30, 31, 20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqf4x"]
_data = {
&"RESET": SubResource("Animation_hqf4x"),
&"charge": SubResource("Animation_u6nmb"),
&"head_swipe": SubResource("Animation_few7h"),
&"head_swipe_reverse": SubResource("Animation_n733k"),
&"idle": SubResource("Animation_qus7o"),
&"spin_end": SubResource("Animation_cvj11"),
&"spin_loop": SubResource("Animation_o2ojk"),
&"spin_start": SubResource("Animation_bav2j"),
&"stomp": SubResource("Animation_fbkg3"),
&"walk": SubResource("Animation_pjux2")
}

[node name="Bull" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_qus7o")

[node name="StepParticles" parent="." instance=ExtResource("2_hqf4x")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_hqf4x")
hframes = 10
vframes = 5

[node name="SpinSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_pjux2")
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_trfny")

[node name="ChargeArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeArea"]
position = Vector2(10, 0)
shape = SubResource("CircleShape2D_pjux2")
disabled = true
debug_color = Color(0.9860459, 0.0155212525, 0.31691507, 0.41960785)

[node name="PlayerSpinHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSpinHitbox"]
shape = SubResource("CircleShape2D_u6nmb")
disabled = true
debug_color = Color(0.6159961, 0.5308008, 0.22691444, 0.41960785)

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_qus7o")
debug_color = Color(0.6486993, 0.5209255, 0, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqf4x")
}

[node name="SwipeSpawnRotateAnchor" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SwipeSpawnRotateAnchor"]
position = Vector2(22, 0)

[connection signal="body_entered" from="PlayerSpinHitbox" to="." method="_on_player_spin_hitbox_body_entered"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
